malware-jail/muestras/839b2ce1e4e4b6d417f7d161aef43d74191a9dc62d62ebeef653409368c9c760/notas
1 Agosto

no está ofuscado y tiene comentarios en inglés
NO ES JAVASCRIPT




ERROR: Dim BBQloudnessLAKOPPC 'As String
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Unexpected identifier

